<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/textview_custom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_padding_left"
            android:layout_marginRight="@dimen/login_padding_left"
            android:layout_marginTop="30dp"
            android:text="@string/text_propos_pomp_as"
            android:textSize="@dimen/size_titre"
            android:gravity="center"/>
        <TextView
            style="@style/textview_custom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_padding_left"
            android:layout_marginRight="@dimen/login_padding_left"
            android:layout_marginTop="8dp"
            android:text="@string/text_propos_rue"
            android:gravity="center"/>
        <TextView
            style="@style/textview_custom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_padding_left"
            android:layout_marginRight="@dimen/login_padding_left"
            android:layout_marginTop="8dp"
            android:text="@string/text_propos_besoin"
            android:gravity="center"/>
        <TextView
            style="@style/textview_custom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_padding_left"
            android:layout_marginRight="@dimen/login_padding_left"
            android:layout_marginTop="14dp"
            android:text="@string/text_propos_contact"
            android:gravity="center"/>
        <TextView
            style="@style/textview_custom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_padding_left"
            android:layout_marginRight="@dimen/login_padding_left"
            android:layout_marginTop="8dp"
            android:text="@string/text_propos_numero"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="122dp"
                android:layout_height="122dp"
                android:src="@drawable/logo_propos"/>
        </LinearLayout>
        <TextView
            style="@style/textview_custom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:gravity="center"
            android:layout_marginLeft="@dimen/login_padding_left"
            android:layout_marginRight="@dimen/login_padding_left"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</RelativeLayout>
