<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <TextView
        style="@style/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/text_reapprovisonnement_titre" />

    <TextView
        style="@style/textview_custom_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_reapprovisonnement_veuillez" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_border_horaire"
            android:gravity="center_vertical"
            android:minHeight="@dimen/header_height"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <EditText
                android:id="@+id/edt_message_2"
                style="@style/textview_custom_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/message" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_message_2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/textview_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="top"
            android:background="@drawable/selector_order"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_envoyer"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>