<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background_green" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="top"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_padding_left"
                    android:layout_marginRight="@dimen/login_padding_left"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="43dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="26dp"
                        android:src="@drawable/car_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/login_padding_left"
                        android:paddingRight="@dimen/login_padding_left">

                        <TextView
                            style="@style/textview_custom_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_marque" />

                        <EditText
                            android:id="@+id/add_car_marque"
                            style="@style/edittext_custom"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/textview_height"
                            android:layout_weight="1"
                            android:hint="@string/hint_marque" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gris" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/login_padding_left"
                        android:paddingRight="@dimen/login_padding_left">

                        <TextView
                            style="@style/textview_custom_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_type" />

                        <EditText
                            android:id="@+id/add_car_type"
                            style="@style/edittext_custom"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/textview_height"
                            android:layout_weight="1"
                            android:hint="@string/hint_type" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gris" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/login_padding_left"
                        android:paddingRight="@dimen/login_padding_left">

                        <TextView
                            style="@style/textview_custom_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_immatriculation" />

                        <EditText
                            android:id="@+id/add_car_immatriculation"
                            style="@style/edittext_custom"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/textview_height"
                            android:layout_weight="1"
                            android:hint="@string/hint_immatriculation"
                            android:inputType="text" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gris" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/login_padding_left"
                        android:paddingRight="@dimen/login_padding_left">

                        <TextView
                            style="@style/textview_custom_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_carburant" />

                        <Spinner
                            android:id="@+id/add_car_carburant_spinner"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/textview_height"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="right|end"
                            android:paddingLeft="5dp"
                            android:spinnerMode="dropdown"
                            android:textAlignment="textEnd" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gris" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/login_padding_left"
                        android:paddingRight="@dimen/login_padding_left">

                        <TextView
                            style="@style/textview_custom_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_couleur" />

                        <EditText
                            android:id="@+id/add_car_couleur"
                            style="@style/edittext_custom"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/textview_height"
                            android:layout_weight="1"
                            android:hint="@string/hint_couleur" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gris"
                        android:visibility="gone"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/login_padding_left"
                        android:paddingRight="@dimen/login_padding_left"
                        android:visibility="gone">

                        <TextView
                            style="@style/textview_custom_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/text_reservoir" />

                        <EditText
                            android:id="@+id/add_car_reservoir"
                            style="@style/edittext_custom"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/textview_height"
                            android:layout_weight="1"
                            android:hint="@string/hint_reservoir"
                            android:inputType="number" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_car_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:layout_gravity="bottom"
                android:background="@drawable/selector_order"
                android:text="@string/button_add_car"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>


