<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background_green" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/login_padding_left"
        android:paddingRight="@dimen/login_padding_left"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/login_view_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="73dp"
                android:src="@drawable/logo_p" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <AutoCompleteTextView
                android:id="@+id/login_email"
                style="@style/style_auth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_height"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="15dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gris" />

            <EditText
                android:id="@+id/login_password"
                style="@style/style_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="15dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_auth"
                android:text="@string/button_login"
                android:textAllCaps="false"
                android:textColor="@color/gris" />

            <TextView
                android:id="@+id/login_password_oublie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/text_pass_oublie"
                android:textColor="@color/text_auth_selector" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/login_creer_compte"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_height"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:background="@drawable/selector_auth"
                android:text="@string/text_creer_compte"
                android:textAllCaps="false"
                android:textColor="@color/gris" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

